Bug 277642 - A file gets opened multiple times on the same side in split view
Summary: A file gets opened multiple times on the same side in split view
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: UI: tabbed pages (other bugs)
Version First Reported In: git master
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 4.2.3
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-12 19:18 UTC by Lambert Clara
Modified: 2011-10-13 11:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lambert Clara 2011-07-12 19:18:16 UTC
Version:           git master (using KDE 4.6.4) 
OS:                Linux

After a split view and switch context, a file can be opened multiple times on the same side.

Reproducible: Always

Steps to Reproduce:
Start without any file opened in kdevelop :
1) open a classA.h file, right click on the tab and press split view Left/Right
--> you should get classA.h  on the left | classA.h  on the right
2) click anywhere in the right part to focus it and press Ctrl+Shift+C to switch Definition/Declaration
--> here I get classA.h and classA.cpp on the left | classA.h
(instead of classA.h on the left | classA.h and classA.cpp on the right)

If you reproduce step 2, more classA.cpp gets opened on the left side.


Expected Results:  
cf. steps
Comment 1 Lambert Clara 2011-07-13 15:11:03 UTC
It seems that the bug come from the new "buddy architecture", and disabling the checkbox "Arrange related documents side by side" and restarting kdevelop makes the bug disappear.
Comment 2 Milian Wolff 2011-10-13 11:03:00 UTC
Git commit fc90ce44350d3648392625168f46d99f5fadf462 by Milian Wolff, on behalf of Lambert CLARA.
Committed on 08/10/2011 at 17:30.
Pushed by mwolff into branch 'master'.

Fix opening of tabs when using buddy documents and split views

BUG: 277642
REVIEW: 102806

M  +17   -7    shell/documentcontroller.cpp
M  +56   -0    shell/tests/shellbuddytest.cpp
M  +1    -0    shell/tests/shellbuddytest.h

http://commits.kde.org/kdevplatform/fc90ce44350d3648392625168f46d99f5fadf462