Fix opening of tabs when using buddy documents and split views

BUG: 277642
REVIEW: 102806